--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "ts-loader": "^9.3.1",
     "vue": "^3.2.13"
   },
   "devDependencies": {
